# warehouse_simulation-autonomous_package_management

./: .gitignore  README.md  build.sh  docker-compose.yml  simulation.sh  system_architecture.md
communication_hub/: Cargo.toml  Dockerfile  build.rs
communication_hub/proto/: delivery.proto
communication_hub/src/: main.rs
delivery_hub/: Dockerfile  docker-compose.yml  hub.py  requirements.txt
delivery_hub/static/: hub.js  script.js
delivery_hub/templates/: hub.html  index.html
robot_simulation/: Dockerfile  app.py  docker-compose.yml  external_hub_listener.py  requirements.txt  state.json
robot_simulation/static/: script.js  style.css
robot_simulation/templates/: index.html
