[package]
name = "communication_hub"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-modbus = "0.6"

# Build dependencies (for build.rs)
[build-dependencies]
tonic-build = "0.9"
